--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -180,12 +180,12 @@
 
               <!-- Check for website link -->
               {% if WEB.CONTACT.website %}
-                <li><a href="{{ WEB.CONTACT.website }}" target="blank"> {{ WEB.CONTACT.website }} </a><i class='bx bxs-planet'></i></li>
+                <li><a href="{{ WEB.CONTACT.website }}" target="blank"> Website </a><i class='bx bxs-planet'></i></li>
               {% endif %}
 
               <!-- check for linkedin link -->
               {% if WEB.CONTACT.linkedin %}
-                <li><a href="{{ WEB.CONTACT.linkedin }}" target="blank"> {{ WEB.CONTACT.linkedin }} </a><i class='bx bxl-linkedin-square' ></i></li>
+                <li><a href="{{ WEB.CONTACT.linkedin }}" target="blank"> Linkedin Profile </a><i class='bx bxl-linkedin-square' ></i></li>
               {% endif %}
             </ul>
           </div>
@@ -193,7 +193,7 @@
 
         <div class="row">
           <div class="col">
-              <hr style="border: 1px solid #0563bb;">
+              <hr style="border: 1px solid #0563bb;margin: unset;">
           </div>
         </div>
 
