--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -49,7 +49,7 @@
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#skills"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+        <li><a href="#skills"><i class="bx bx-server"></i> <span>Tools</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
@@ -105,7 +105,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Tools</h2>
           <p> {{ WEB.SKILLS.title }} </p>
         </div>
 
